--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 @media (min-width: 640px) {
     .container {
-        max-width: 100%;  /* Overrides the max-width property */
+        max-width: 100% !important; 
     }
 }
 
